@@ -1,7 +1,7 @@
 plugins {
     id("com.android.application")
     id("org.jetbrains.kotlin.android")
-//    id("org.jetbrains.kotlin.kapt")
+    id("com.google.devtools.ksp")
     id("com.github.ben-manes.versions") version "0.52.0"
 }
 
@@ -48,21 +48,13 @@ android {
     }
 }
 
-/*kapt {
-    javacOptions {
-        option("--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
-        option("--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
-        option("--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
-        option("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
-    }
-}*/
-
 dependencies {
     implementation(libs.appcompat)
     implementation(libs.material)
     implementation(libs.constraintlayout)
     implementation(libs.navigation.fragment.ktx)
     implementation(libs.navigation.ui.ktx)
+    implementation(libs.kotlin.stdlib)
     implementation(libs.kotlin.stdlib)
     testImplementation(libs.junit)
     androidTestImplementation(libs.ext.junit)
@@ -71,10 +63,6 @@ dependencies {
     implementation(libs.retrofit2)
     implementation(libs.retrofit2.converter.gson)
     implementation(libs.okhttp3.logging.interceptor)
-    // Retrofit
-    implementation ("com.squareup.retrofit2:retrofit:2.9.0")
 
-    // JSON converter (usually Gson)
-    implementation ("com.squareup.retrofit2:converter-gson:2.9.0")
-
+    implementation(libs.glide)
 }
